# tsync

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .project.toolkit.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: auto-merge.yaml  dependency-review.yaml  lint-commits.yaml  release.yaml  stale.yaml
src/tsync/: __init__.py  app.py  cli.py
src/tsync/handlers/: base.py  init.py  merge.py  sync_strict.py  template.py
src/tsync/handlers/mergers/: base.py  json.py  text.py  yaml.py
src/tsync/models/: __init__.py  consumer.py  context.py  merge.py  policy.py  provider.py
src/tsync/services/: fs.py  git.py  sync.py  template.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_full_sync.py
tests/test_handlers/: __init__.py  test_init.py  test_sync_strict.py  test_template.py
tests/test_handlers/test_mergers/: __init__.py  test_json.py  test_merge_priority.py  test_text.py  test_yaml.py
tests/test_models/: __init__.py  test_consumer.py  test_context.py  test_provider.py
tests/test_services/: __init__.py  test_fs.py  test_fs_security.py  test_sync.py  test_template.py
